--- a/src/app/modules/view/dashboard-view/dashboard-view.component.html
+++ b/src/app/modules/view/dashboard-view/dashboard-view.component.html
@@ -1,11 +1,11 @@
 <section class="container-content">
   <div class="container-tool">
-    <button class="btn btn-dark btn-tool" (click)="clickAdd()">📁 Inventariar</button>
+    <button class="btn btn-primary btn-tool" (click)="clickAdd()">📁 Inventariar</button>
   </div>
-  <div class="container-table">
-    <table class="table table-striped table-dark">
+  <div class="container-table" style="background-color: #0d6efd;">
+    <table class="table table-striped">
       <thead>
-        <tr>
+        <tr class="bg-primary">
           <th scope="col">#</th>
           <th scope="col">Titulo</th>
           <th scope="col">#Paginas</th>
@@ -16,7 +16,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let t of lista">
+        <tr *ngFor="let t of lista" class="bg-info">
           <th>{{t.idLibro}}</th>
           <td>{{t.titulo}}</td>
           <td>{{t.nPaginas}}</td>
@@ -24,7 +24,7 @@
           <td>{{t.editorial}}</td>
           <td>{{t.sede}}</td>
           <td>
-            <button [id]="t.idLibro">🗑️</button>
+            <button [id]="t.idKey" (click)="clickDeleteRelacion($event)">🗑️</button>
           </td>
         </tr>
       </tbody>
@@ -60,7 +60,7 @@
               <td>{{t.nombre}}</td>
               <td>{{t.apellido}}</td>
               <td style="display: flex;">
-                <button [id]="t.idAutor" (click)="clickDeleteAutor($event)">🗑️</button>
+                <button [id]="t.idAutor" [disabled]="false" (click)="clickDeleteAutor($event)">🗑️</button>
               </td>
             </tr>
           </tbody>
@@ -93,7 +93,7 @@
               <td>{{t.nombre}}</td>
               <td>{{t.sede}}</td>
               <td>
-                <button [id]="t.idEditorial">🗑️</button>
+                <button [id]="t.idEditorial" [disabled]="false" (click)="clickDeleteEditorial($event)">🗑️</button>
               </td>
             </tr>
           </tbody>
@@ -132,7 +132,7 @@
               <td>{{t.nPaginas}}</td>
               <td>{{t.idEditorial}}</td>
               <td>
-                <button [id]="t.idLibro">🗑️</button>
+                <button [id]="t.idLibro" [disabled]="false" (click)="clickDeleteLibro($event)">🗑️</button>
               </td>
             </tr>
           </tbody>
