--- a/src/app/modules/view/details-view/details-view.component.html
+++ b/src/app/modules/view/details-view/details-view.component.html
@@ -17,7 +17,7 @@
                     <h3 class="card__title">📚 {{t.titulo}}</h3>
                     <p class="card_body"><small>{{t.sinopsis}}</small></p>
                     <div style="text-align: center;">
-                        <button class="btn btn-info" [id]="t.idLibro" (click)="detalleBook($event)">
+                        <button class="btn btn-info" [id]="t.idKey" (click)="detalleBook($event)">
                             Detalle
                         </button>
                     </div>
